--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -12,9 +12,10 @@
     tools:context="ir.dideo.dideo.MainActivity"
     tools:showIn="@layout/activity_main">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:id="@+id/text"
-        android:layout_height="wrap_content"
-        android:text="Hello World!" />
+    <fragment
+        android:name="ir.dideo.dideo.RecentSearches"
+        android:id="@+id/fooFragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:layout="@layout/recent" />
 </RelativeLayout>
