--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -12,6 +12,7 @@
     tools:context="ir.dideo.dideo.MainActivity"
     tools:showIn="@layout/activity_main">
 <LinearLayout
+    android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -22,11 +23,6 @@
         android:layout_height="wrap_content"
         android:text="Hello World!" />
 
-    <ListView
-        android:id="@+id/listview"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
-    </ListView>
 
 </LinearLayout>
 
