--- a/app/src/main/res/layout/content_result.xml
+++ b/app/src/main/res/layout/content_result.xml
@@ -2,14 +2,32 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/resultContainer"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:paddingBottom="@dimen/zero_padding"
+    android:paddingLeft="@dimen/zero_padding"
+    android:paddingRight="@dimen/zero_padding"
+    android:paddingTop="@dimen/zero_padding"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="ir.dideo.dideo.ResultActivity"
     tools:showIn="@layout/app_bar_result">
+
+    <FrameLayout
+        android:id="@+id/progressBarHolder"
+        android:animateLayoutChanges="true"
+        android:visibility="gone"
+        android:alpha="0.4"
+        android:background="#000000"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <ProgressBar
+            style="?android:attr/progressBarStyleLarge"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:indeterminate="true"
+            android:layout_gravity="center" />
+    </FrameLayout>
 
 </RelativeLayout>
