material searchview and mediaPlayer added

--- a/app/src/main/res/layout/content_result.xml
+++ b/app/src/main/res/layout/content_result.xml
@@ -10,7 +10,7 @@
     android:paddingRight="@dimen/zero_padding"
     android:paddingTop="@dimen/zero_padding"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="ir.dideo.dideo.ResultActivity"
+    tools:context=".activites.ResultActivity"
     tools:showIn="@layout/app_bar_result">
 
     <FrameLayout
