--- a/app/src/main/res/layout/content_result.xml
+++ b/app/src/main/res/layout/content_result.xml
@@ -30,4 +30,8 @@
             android:layout_gravity="center" />
     </FrameLayout>
 
+    <ListView
+        android:id="@+id/SearchResultListView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 </RelativeLayout>
