--- a/app/src/main/res/layout/suggest.xml
+++ b/app/src/main/res/layout/suggest.xml
@@ -7,7 +7,7 @@
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="1"
-        android:src="@drawable/ic_search"/>
+        android:src="@drawable/search_ic"/>
     <TextView
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -25,6 +25,8 @@
         android:layout_height="match_parent"
         android:background="@android:color/white"
         android:layout_weight="1"
+        android:padding="9dp"
+        android:visibility="visible"
         android:src="@drawable/remove"/>
 
 
